--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && nodemon server.js",
+    "build": "ng build && forever start server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
