--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "forever start server.js",
     "build": "ng build && forever start server.js",
     "test": "ng test",
     "lint": "ng lint",
