--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "forever start server.js",
-    "build": "ng build && forever start server.js",
+    // "start": "forever start server.js",
+    "start": "node server.js",
+    // "build": "ng build && forever start server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -31,8 +33,8 @@
     "ng2-select2": "^1.0.0-beta.10",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",    
-    "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "1.0.0",
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
