--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",    
     "@angular/compiler-cli": "^4.0.0",
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.0.0"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
