--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
@@ -23,6 +25,7 @@
     "@angular/router": "^4.0.0",
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
@@ -30,9 +33,8 @@
     "mongoose": "^4.9.5",
     "ng2-select2": "^1.0.0-beta.10",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",    
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/cli": "1.0.0"
+    "select2": "^4.0.3",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
