--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.5",
+    "mysql": "^2.13.0",
     "ng2-select2": "^1.0.0-beta.10",
     "rxjs": "^5.1.0",
     "select2": "^4.0.3",
