--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
+  },
+  "engines": {
+  "node": "6.2.2",
+  "npm": "4.5.0"
   }
 }
