--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build && node server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -55,7 +55,7 @@
     "typescript": "~2.2.0"
   },
   "engines": {
-  "node": "6.2.2",
-  "npm": "4.5.0"
+    "node": "6.11.1",
+    "npm": "4.5.0"
   }
 }
