--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.5",
     "mysql": "^2.13.0",
     "ng2-select2": "^1.0.0-beta.10",
     "rxjs": "^5.1.0",
     "select2": "^4.0.3",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
