--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^4.0.0",
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
@@ -34,6 +34,7 @@
     "mongoose": "^4.9.5",
     "mysql": "^2.13.0",
     "ng2-select2": "^1.0.0-beta.10",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
     "select2": "^4.0.3",
     "tether": "^1.4.0",
