--- a/config.json
+++ b/config.json
@@ -1,15 +1,5 @@
 
 {
-    "express"  : {
-        "port"     : 5000
-    },
-    "mongodb": {
-        "db"       : "prUser",
-        "user"     : "",
-        "password" : "",
-        "host"     : "localhost",
-        "port"     : "27017"
-    },
-    "secret": "ilovescotchyscotch",
+    "secret": "strong-n-encourage",
     "api":"http://localhost:3000"
 }
