--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.5",
+    "mydatepicker": "^2.0.31",
     "mysql": "^2.13.0",
     "ng2-select2": "^1.0.0-beta.10",
     "popper.js": "^1.12.5",
