--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-beta",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
