--- a/package.json
+++ b/package.json
@@ -9,44 +9,44 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/router": "^4.4.4",
     "axios": "^0.16.1",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
-    "express": "^4.15.2",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
     "md5": "^2.2.1",
-    "mongoose": "^4.9.5",
+    "mongoose": "^4.12.1",
     "mydatepicker": "^2.0.31",
-    "mysql": "^2.13.0",
+    "mysql": "^2.15.0",
     "ng2-select2": "^1.0.0-beta.10",
     "popper.js": "^1.12.5",
     "rxjs": "^5.1.0",
-    "select2": "^4.0.3",
+    "select2": "^4.0.4",
     "tether": "^1.4.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.4.6",
     "@types/google.analytics": "0.0.35",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.89",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
