--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "1.4.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -44,6 +44,7 @@
     "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
     "select2": "^4.0.4",
+    "toastr": "^2.1.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
