--- a/app.yaml
+++ b/app.yaml
@@ -11,7 +11,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
 # [START runtime]
 runtime: nodejs
 env: flex
 # [END runtime]
+
+# [START env]
+env_variables:
+  SQL_USER: root
+  SQL_PASSWORD: admin
+  SQL_DATABASE: chaskiy-db
+  # e.g. my-awesome-project:us-central1:my-cloud-sql-instance
+  INSTANCE_CONNECTION_NAME: chaskiy-191704:southamerica-east1:chaskiy-db
+# [END env]
+
+# [START cloudsql_settings]
+beta_settings:
+  # The connection name of your instance, available by using
+  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
+  # the Instance details page in the Google Cloud Platform Console.
+  cloud_sql_instances: chaskiy-191704:southamerica-east1:chaskiy-db
+# [END cloudsql_settings]
