--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
     "select2": "^4.0.4",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "toastr": "^2.1.4",
     "zone.js": "^0.8.14"
   },
