--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "1.6.6",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.2.4",
@@ -30,21 +30,21 @@
     "@angular/router": "^4.2.4",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "md5": "^2.2.1",
     "moment": "^2.19.1",
     "mydatepicker": "^2.0.31",
     "mysql": "^2.15.0",
-    "ng2-select2": "^1.0.0-beta.10",
     "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
-    "select2": "^4.0.4",
+    "select2": "^4.0.6-rc.1",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "toastr": "^2.1.4",
     "zone.js": "^0.8.14"
