--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "typescript": "~2.3.3",
     "@angular/animations": "^4.2.4",
     "@angular/cli": "1.6.6",
     "@angular/common": "^4.2.4",
@@ -45,7 +46,6 @@
     "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
     "select2": "^4.0.6-rc.1",
-    "selenium-webdriver": "^4.0.0-alpha.1",
     "toastr": "^2.1.4",
     "zone.js": "^0.8.14"
   },
@@ -66,8 +66,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "tslint": "~5.3.2"
   },
   "engines": {
     "node": "8.4.0",
