--- a/app.yaml
+++ b/app.yaml
@@ -22,6 +22,7 @@ env_variables:
   SQL_USER: root
   SQL_PASSWORD: admin
   SQL_DATABASE: chaskiy-db
+  CORREO_GENERICO: https://correo-generico.herokuapp.com
   # e.g. my-awesome-project:us-central1:my-cloud-sql-instance
   INSTANCE_CONNECTION_NAME: chaskiy-191704:southamerica-east1:chaskiy-db
 # [END env]
