--- a/app.yaml
+++ b/app.yaml
@@ -27,6 +27,19 @@ env_variables:
   INSTANCE_CONNECTION_NAME: chaskiy-191704:southamerica-east1:chaskiy-db
 # [END env]
 
+# [START scale]
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 2
+# [END scale]
+
+# [START resources]
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
+# [END resources]
+
 # [START cloudsql_settings]
 beta_settings:
   # The connection name of your instance, available by using
