--- a/package.json
+++ b/package.json
@@ -7,28 +7,27 @@
     "start": "node index.js",
     "start:dev": "npm-run-all --parallel test:watch open:srv",
     "open:srv": "nodemon index.js",
-    "test:watch": "ng build -op dist -w",
+    "test:watch": "ng build --output-path dist --watch",
     "build": "ng build && nodemon index.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "ng build --aot --prod",
     "start-proxy": "! pgrep cloud_sql_proxy > /dev/null && cloud_sql_proxy -instances=$INSTANCE_CONNECTION_NAME=tcp:$SQL_PORT &"
   },
   "private": true,
   "dependencies": {
-    "typescript": "~2.3.3",
-    "@angular/animations": "^4.2.4",
-    "@angular/cli": "1.6.6",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "6.0.6",
+    "@angular/cli": "6.0.8",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/router": "6.0.6",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -44,13 +43,14 @@
     "mydatepicker": "^2.0.31",
     "mysql": "^2.15.0",
     "popper.js": "^1.12.6",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.2.1",
     "select2": "^4.0.6-rc.1",
     "toastr": "^2.1.4",
-    "zone.js": "^0.8.14"
+    "typescript": "2.7.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.2.4",
+    "@angular/language-service": "6.0.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -66,7 +66,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2"
+    "tslint": "~5.3.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   },
   "engines": {
     "node": "8.4.0",
