subida hasta camelCase, correo en pago, look n feel, reserva desde pagina, refactoring

--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "src/styles.scss",
               "src/styles.css"
             ],
             "scripts": [
@@ -85,6 +86,7 @@
               "node_modules/chart.js/dist/Chart.min.js"
             ],
             "styles": [
+              "src/styles.scss",
               "src/styles.css"
             ],
             "assets": [
