--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "6.0.6",
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
+    "@angular-devkit/build-angular": "~0.6.8",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -66,8 +67,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "tslint": "~5.3.2"
   },
   "engines": {
     "node": "8.9.4",
