configuracion en puerto 80 y certificados con https

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "pm2 start index.js",
+    "start": "pm2 start api/server.js",
+    "start:prod": "pm2 start api/server-https.js",
     "start:dev": "npm-run-all --parallel test:watch open:srv",
-    "open:srv": "nodemon index.js",
+    "open:srv": "nodemon api/server.js",
     "test:watch": "ng build --output-path dist --watch",
-    "build": "ng build && nodemon index.js",
+    "build": "ng build && nodemon api/server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
