cambio script start:dev -> dev

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng build && node api/server.js",
     "start:prod": "pm2 start api/server.js --name chaskiy",
-    "start:dev": "npm-run-all --parallel test:watch open:srv",
+    "dev": "npm-run-all --parallel test:watch open:srv",
     "open:srv": "nodemon api/server.js",
     "test:watch": "ng build --output-path dist --watch",
     "build": "ng build && nodemon api/server.js",
