--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "test:watch": "ng build --output-path dist --watch",
     "build": "ng build && nodemon api/server.js",
     "test": "ng test",
+    "format:fix": "pretty-quick --staged",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/animations": "6.0.6",
     "@angular/cli": "6.0.8",
     "@angular/common": "6.0.6",
@@ -28,12 +35,12 @@
     "@angular/platform-browser": "6.0.6",
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
-    "@angular-devkit/build-angular": "~0.6.8",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
@@ -55,8 +62,8 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "npm-run-all": "1.8.0",
     "codelyzer": "~3.1.1",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -65,6 +72,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^1.8.0",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2"
