--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "ng": "ng",
     "start": "ng build && node api/server.js",
     "start:prod": "pm2 start api/server.js --name chaskiy",
-    "dev": "npm-run-all --parallel test:watch open:srv",
-    "open:srv": "nodemon api/server.js",
+    "dev": "npm-run-all --parallel test:watch dev:server",
+    "dev:server": "nodemon --exec babel-node API/server.js",
     "test:watch": "ng build --output-path dist --watch",
     "build": "ng build && nodemon api/server.js",
     "test": "ng test",
@@ -48,8 +48,9 @@
     "jwt-decode": "^2.2.0",
     "md5": "^2.2.1",
     "moment": "^2.19.1",
+    "multer": "^1.4.1",
     "mydatepicker": "^2.0.31",
-    "mysql": "^2.15.0",
+    "mysql": "^2.17.1",
     "popper.js": "^1.12.6",
     "rxjs": "^6.2.1",
     "select2": "^4.0.6-rc.1",
@@ -59,6 +60,12 @@
   },
   "devDependencies": {
     "@angular/language-service": "6.0.6",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/node": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
