--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format:fix": "pretty-quick --staged",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "build:prod": "ng build --aot --prod"
   },
   "husky": {
     "hooks": {
