build-server script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format:fix": "pretty-quick --staged",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:prod": "ng build --aot --prod"
+    "build:prod": "ng build --aot --prod",
+    "build-server": "babel API --out-dir API_DIST --copy-files"
   },
   "husky": {
     "hooks": {
