--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser": "6.0.6",
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
+    "aws-sdk": "^2.580.0",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -50,6 +51,7 @@
     "md5": "^2.2.1",
     "moment": "^2.19.1",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "mydatepicker": "^2.0.31",
     "mysql": "^2.17.1",
     "popper.js": "^1.12.6",
