--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/router": "6.0.6",
     "aws-sdk": "^2.580.0",
     "axios": "^0.17.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.1",
