--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "multer-s3": "^2.9.0",
     "mydatepicker": "^2.0.31",
     "mysql": "^2.17.1",
+    "node-sass": "^6.0.1",
     "popper.js": "^1.12.6",
     "rxjs": "^6.2.1",
     "select2": "^4.0.6-rc.1",
