--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "mydatepicker": "^2.0.31",
     "mysql": "^2.17.1",
     "popper.js": "^1.12.6",
-    "rxjs": "^6.2.1",
+    "rxjs": "6.2.1",
     "select2": "^4.0.6-rc.1",
     "toastr": "^2.1.4",
     "typescript": "2.7.2",
@@ -83,6 +83,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^1.8.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
