--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/animations": "6.0.6",
-    "@angular/cli": "7.3.10",
-    "@angular/common": "6.0.6",
-    "@angular/compiler": "6.0.6",
-    "@angular/compiler-cli": "6.0.6",
-    "@angular/core": "7.2.16",
-    "@angular/forms": "6.0.6",
-    "@angular/platform-browser": "6.0.6",
-    "@angular/platform-browser-dynamic": "6.0.6",
-    "@angular/router": "6.0.6",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "8.2.14",
+    "@angular/cli": "8.3.29",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "aws-sdk": "^2.580.0",
     "axios": "^0.17.0",
     "babel-polyfill": "^6.26.0",
@@ -55,14 +55,14 @@
     "mydatepicker": "^2.0.31",
     "mysql": "^2.17.1",
     "popper.js": "^1.12.6",
-    "rxjs": "6.2.1",
+    "rxjs": "6.6.7",
     "select2": "^4.0.6-rc.1",
     "toastr": "^2.1.4",
-    "typescript": "2.7.2",
-    "zone.js": "^0.8.26"
+    "typescript": "3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/language-service": "6.0.6",
+    "@angular/language-service": "8.2.14",
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
@@ -72,6 +72,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "codelyzer": "^5.0.1",
     "husky": "^1.3.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
