--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/animations": "8.2.14",
-    "@angular/cli": "8.3.29",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/animations": "9.1.13",
+    "@angular/cli": "9.1.15",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/forms": "9.1.13",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
+    "angular-mydatepicker": "^0.11.5",
     "aws-sdk": "^2.580.0",
     "axios": "^0.17.0",
     "babel-polyfill": "^6.26.0",
@@ -52,17 +53,16 @@
     "moment": "^2.19.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
-    "mydatepicker": "^2.0.31",
     "mysql": "^2.17.1",
     "popper.js": "^1.12.6",
     "rxjs": "6.6.7",
     "select2": "^4.0.6-rc.1",
     "toastr": "^2.1.4",
-    "typescript": "3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "3.8.3",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/language-service": "8.2.14",
+    "@angular/language-service": "9.1.13",
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
@@ -82,7 +82,6 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^9.0.0",
     "npm-run-all": "^1.8.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
