--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular/animations": "13.4.0",
-    "@angular/cli": "13.3.11",
-    "@angular/common": "13.4.0",
-    "@angular/compiler": "13.4.0",
-    "@angular/compiler-cli": "13.4.0",
-    "@angular/core": "13.4.0",
-    "@angular/forms": "13.4.0",
-    "@angular/platform-browser": "13.4.0",
-    "@angular/platform-browser-dynamic": "13.4.0",
-    "@angular/router": "13.4.0",
+    "@angular-devkit/build-angular": "^14.2.12",
+    "@angular/animations": "14.3.0",
+    "@angular/cli": "14.2.12",
+    "@angular/common": "14.3.0",
+    "@angular/compiler": "14.3.0",
+    "@angular/compiler-cli": "14.3.0",
+    "@angular/core": "14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/platform-browser": "14.3.0",
+    "@angular/platform-browser-dynamic": "14.3.0",
+    "@angular/router": "14.3.0",
     "angular-mydatepicker": "^0.11.5",
     "aws-sdk": "^2.580.0",
     "axios": "^0.17.0",
@@ -62,7 +62,7 @@
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular/language-service": "13.4.0",
+    "@angular/language-service": "14.3.0",
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
