--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --aot",
+    "build": "ng build --aot --configuration=production",
     "test": "ng test",
     "format:fix": "pretty-quick --staged",
     "lint": "ng lint",
