--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - 'traefik.enable=true'
       - 'traefik.docker.network=proxy'
       - 'traefik.http.routers.app-chaskiy-secure.entrypoints=websecure'
-      - 'traefik.http.routers.app-chaskiy-secure.rule=Host(`app.hotels.nomadem.cloud`)'
+      - 'traefik.http.routers.app-chaskiy-secure.rule=Host(`hotels.nomadem.cloud`)'
       - 'traefik.http.routers.app-chaskiy-secure.service=app-chaskiy'
       - 'traefik.http.services.app-chaskiy.loadbalancer.server.port=3001'
 
