--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   app-chaskiy:
+    restart: unless-stopped
     image: ${IMAGE_URL}
     container_name: app.chaskiy
     networks:
